@@ -14,7 +14,7 @@
 #include <iterator>
 
 #include "profile_spec.h"
-#include "partition_files.h"
+#include "arrange_profiles.h"
 #include "op_exception.h"
 #include "opannotate_options.h"
 #include "popt_options.h"
@@ -22,7 +22,7 @@
 
 using namespace std;
 
-vector<partition_files> sample_file_partition;
+vector<profile_class> profile_classes;
 
 namespace options {
 	bool demangle = true;
@@ -112,19 +112,6 @@ void handle_options(vector<string> const & non_options)
 	copy(sample_files.begin(), sample_files.end(),
 	     ostream_iterator<string>(cverb, "\n"));
 
-	vector<unmergeable_profile>
-		unmerged_profile = merge_profile(sample_files);
-
-	cverb << "Unmergeable profile specification:\n";
-	copy(unmerged_profile.begin(), unmerged_profile.end(),
-	     ostream_iterator<unmergeable_profile>(cverb, "\n"));
-
-	if (unmerged_profile.empty()) {
-		cerr << "No samples files found: profile specification too "
-		     << "strict ?" << endl;
-		exit(EXIT_FAILURE);
-	}
-
 	// we always merge but this have no effect on output since at source
 	// or assembly point of view the result will be merged anyway
 	merge_option merge_by;
@@ -134,15 +121,11 @@ void handle_options(vector<string> const & non_options)
 	merge_by.tgid = true;
 	merge_by.unitmask = true;
 
-	unmergeable_samplefile unmerged_samplefile =
-		unmerge_samplefile(sample_files, unmerged_profile);
+	profile_classes = arrange_profiles(sample_files, merge_by);
 
-	unmergeable_samplefile::const_iterator const cend =
-		unmerged_samplefile.end();
-	unmergeable_samplefile::const_iterator cit =
-		unmerged_samplefile.begin();
-	for ( ; cit != cend ; ++cit) {
-		sample_file_partition.push_back(
-			partition_files(*cit, merge_by));
+	if (profile_classes.empty()) {
+		cerr << "No samples files found: profile specification too "
+		     << "strict ?" << endl;
+		exit(EXIT_FAILURE);
 	}
 }
